# dind-awscli-python

./: Dockerfile
.github/workflows/: build.yml
pip/: Makefile  pyproject.toml  requirements.txt
