[tool.poetry]
name = "dind-awscli-python"
version = "0.1.0"
description = ""
authors = ["Caian Ertl <caian.ertl@mzgroup.com>"]

[tool.poetry.dependencies]
python = "3.9.12"
aws-sam-cli = "^1.48.0"
docker-compose = "1.26.2"
awscli = "^1.23.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
