[tool.poetry]
name        = "dind-awscli-python"
version     = "0.1.0"
description = ""
authors     = ["Caian Ertl <caian.ertl@mzgroup.com>"]

[tool.poetry.dependencies]
python = "^3.10"
awscli = "1.25.82"

[tool.poetry.dev-dependencies]

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
